.superpowers/brainstorm/38678-1781076750/state/server.log
/Users/Mehdi/.claude/plugins/cache/superpowers-dev/superpowers/5.1.0/skills/brainstorming/scripts/server.cjs:233
  console.log(JSON.stringify({ source: 'user-event', ...event }));
                                                     ^^^

SyntaxError: Unexpected token ...
    at createScript (vm.js:74:10)
    at Object.runInThisContext (vm.js:116:10)
    at Module._compile (module.js:533:28)
    at Object.Module._extensions..js (module.js:580:10)
    at Module.load (module.js:503:32)
    at tryModuleLoad (module.js:466:12)
    at Function.Module._load (module.js:458:3)
    at Function.Module.runMain (module.js:605:10)
    at startup (bootstrap_node.js:158:16)
    at bootstrap_node.js:575:3
